--- a/TelekomunikacijskiOperaterApp/pom.xml
+++ b/TelekomunikacijskiOperaterApp/pom.xml
@@ -11,7 +11,7 @@
         <maven.compiler.target>13</maven.compiler.target>
     </properties>
     
-    <dependencies>
+      <dependencies>
         <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
@@ -26,6 +26,21 @@
             <version>5.4.12.Final</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.6</version>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+
+        
     </dependencies>
-    <name>TelekomunikacijskiOperaterApp</name>
 </project>
