--- a/TelekomunikacijskiOperaterApp/pom.xml
+++ b/TelekomunikacijskiOperaterApp/pom.xml
@@ -47,6 +47,26 @@
             <version>2.8.6</version>
         </dependency>
 
+<!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+<dependency>
+    <groupId>jfree</groupId>
+    <artifactId>jfreechart</artifactId>
+    <version>1.0.13</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-imaging</artifactId>
+    <version>1.0-alpha1</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>4.1.2</version>
+</dependency>
 
         
     </dependencies>
